--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <link rel="stylesheet" href="">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title></title>
+	<link rel="stylesheet" href="">
 </head>
 <body>
-    <div id="form">
-        <input type="text" value="https://syncer.jp/hatebu-api-matome">
-        <button>送信</button>
-    </div>
-    
-    <script type="text/javascript" src="js/main.js"></script>
+	<div id="form">
+		<input type="text" value="https://syncer.jp/hatebu-api-matome">
+		<button>送信</button>
+	</div>
+	<div id="result">
+		
+	</div>
+	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
