--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -4,14 +4,11 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title></title>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<div id="form">
-		<input type="text" value="https://syncer.jp/hatebu-api-matome">
-		<button>送信</button>
-	</div>
-	<div id="result">
+	<div id="container"></div>
+	<div id="debug">
 		
 	</div>
 	<script type="text/javascript" src="js/main.js"></script>
