--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -3,15 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
+	<title>Better Hotentry</title>
 	<link rel="stylesheet" href="css/main.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">  
 </head>
 <body>
 	<div id="container"></div>
-	<div id="debug">
-		
-	</div>
+	<div id="debug"></div>
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
