--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -3,9 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+	<meta name="description" content="はてブのホットエントリーに独自に計算したスコアを一緒に表示します">
+	<meta name="keywords" content="はてな,はてなブックマーク,スコア,ホットエントリー">
 	<title>Better Hotentry</title>
 	<link rel="stylesheet" href="css/main.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">  
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -16,9 +18,15 @@
 	</script>
 </head>
 <body>
-	<div id="container"></div>
-	<div id="debug"></div>
-	
+	<div class="wrapper">
+		<h1>Better Hotentry <small><a href="about.html">このサイトについて</a></small></h1>
+		<div id="container"></div>
+		<footer class="globalFooter">
+			<small>
+				Developed by Otto Kamiya(<a href="https://twitter.com/megazal_rock" target="_blank">@megazal_rock</a>)
+			</small>
+		</footer>
+	</div>
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
