--- a/htdocs/about.html
+++ b/htdocs/about.html
@@ -24,24 +24,27 @@
 			<h2>このサイトについて</h2>
 			<p>
 				はてなブックマークのホットエントリーにブックマークしたユーザーから独自に計算した記事のスコアを表示しています。<br>
-				新着エントリーも見れますがサンプル数が少ないためスコアの信頼度はあまり高くありません。<br>
-				個人的にはスコアの信頼度はまだ改良する必要があると思いますが、これ以上追加するパラメーターもなさそうなので難しいかもしれません。<br>
-				ドメインの信頼度のスコアみたいなものがあれば補正に使えそうですが…。
+				新着エントリーも見れますし、ブコメもその場で表示できます。<br>
+				ブコメもスターの多い順にソートしたいのですが、ブコメのパーマリンクごとにはてなスターのAPIを叩かないといけないのでやめました。
 			</p>
+			<p>対応OSはGoogleChromeとiOS Safariです。他は面倒なので確認してませんが、まともなモダンブラウザならきっと動きます。</p>
 			<h2>技術的なこと</h2>
 			<p>
-				さくらのレンタルサーバーでフロントエンドはReact、バックエンドはPHP+MySQLで動いています。
+				さくらのレンタルサーバーでフロントエンドはReact+jQuery、バックエンドはPHP+MySQLで動いています。<br>
+				Gulp、Browserify、Bable、LessCssあたりを使ってES6（JSX）で書いてます。<br>
+				バックエンドでは特にフレームワークは使っていません。<br>
+				RSSや各ユーザーのカルマはcronで定期的に実行しています。
 			</p>
 			<h3>記事のスコアの計算方法</h3>
 			<p>
 				スコアは主にブックマークしているユーザーに基いて計算しています。<br>
-				バックエンドで各ユーザーの独自に計算した<strong>カルマ</strong>保持していています。<br>
-				そのカルマの合計値から「あとで読む」タグの数を引いたものがスコアになっています。<br>
+				バックエンドで各ユーザーの独自に計算した<strong>カルマ</strong>を保持していています。
 			</p>
 			<h3>ユーザーのカルマの計算方法</h3>
 			<p>
-				スターから計算していますが単純な合計値ではありません。<br>
-				簡単に言うとスターをたくさんもらうとカルマが上がります。
+				スター<strong>など</strong>から計算しています。<br>
+				簡単に言うとスターをたくさんもらうとカルマが上がりますが、仮にイエロースターを1万個もらってもカルマはわずかしか増えません。<br>
+				アップデートするうちに「など」の方が比重が大きくなっています。
 			</p>
 			<h2>作った人</h2>
 			<p>
