Routeを使った構成に変更

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -19,9 +19,16 @@
 </head>
 <body>
 	<div class="wrapper">
-		<h1>Better Hotentry <small><a href="about.html">このサイトについて</a></small></h1>
-		<div id="container"></div>
+		<h1>Better Hotentry</h1>
+		<div id="container"></div>	
 		<footer class="globalFooter">
+			<ul class="siteMap">
+				<li><a href="/">ホットエントリー</a></li>
+				<li><a href="/new">新着</a></li>
+				<li><a href="/about">このサイトについて</a></li>
+				<li><a href="/score">スコアだけ取得</a></li>
+				<li><a href="/star">スターランキング</a></li>
+			</ul>
 			<small>
 				Developed by Otto Kamiya(<a href="https://twitter.com/megazal_rock" target="_blank">@megazal_rock</a>)
 			</small>
